examples/test/testpolicy18992.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18992
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key32: value12
      key30: value32
      key8: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value42
      podSelector:
        matchLabels:
          key15: value8
